package com.directi.training.dip.exerice_refactored;

public interface Database {
    int write(String inputString);
}
