package com.directi.training.dip.exerice_refactored;

import java.io.IOException;

public interface EncodingModule
{
    public  void encodeWithFiles() throws IOException ;

    public void encodeBasedOnNetworkAndDatabase() throws IOException;
}

